# heart-attack-clasificacion

./: .gitignore  Diccionario_Datos.md  README.md  main.py  pyproject.toml  requirements.txt
app/: heart_attack.py
data/: 02_data_ataques_cardiacos_transformados.parquet
models/: randomForest_model.joblib  random_forest_tuned_model.pkl
notebooks/: 01_carga_datos.ipynb  02_analisis_exploratorio.ipynb  03_AutoML_Pycaret.ipynb  04_entramiento_modelos.ipynb  05_lectura_modelo.ipynb
src/data/: 01_data_ataques_cardiacos.parquet  02_data_ataques_cardiacos_transformados.parquet
src/modelos/: randomForest_best_model.joblib
src/notebooks/: 01_carga_datos.ipynb  02_analisis_exploratorio.ipynb  03_AutoML_Pycaret.ipynb  04_entramiento_modelos_random_forest.ipynb
