[project]
name = "za-proyecto-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib<3.8.0",
    "numpy>=1.21,<1.27",
    "pandas>=1.3.0,<2.2.0",
    "plotly>=5.0.0",
    "pyarrow>=14.0.0",
    "pycaret>=3.3.2",
    "xgboost>=1.5,<2.0",
    "scikit-learn>=1.0,<1.5.0",
    "scipy>=1.10.1,<1.12.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
